# mini-compiler

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
include/lexer/: lexer.h
src/: main.cpp
src/lexer/: Lexer.cpp
tests/samples/: hello.mc
